--- a/index.css
+++ b/index.css
@@ -125,6 +125,11 @@ p {
   background-size: 100%;
 }
 
+.option1 p {
+  font-family: "SVN-Book Antiqua";
+  font-size: 16pt;
+}
+
 /* option2 */
 .bg-option2 {
   float: left;
@@ -145,6 +150,11 @@ p {
   border: 3px solid #007e7f;
 }
 
+.option2 {
+  font-family: "SVN-Book Antiqua";
+  font-size: 16pt;
+}
+
 /* option3 */
 .bg-option3 {
   float: left;
@@ -152,6 +162,11 @@ p {
   background-size: 70%;
   background-repeat: no-repeat;
   background-position: center;
+}
+
+.option3 p {
+  font-family: "SVN-Book Antiqua";
+  font-size: 14pt;
 }
 
 .content.option3 .row {
@@ -216,6 +231,24 @@ p {
 }
 
 /* option5 */
+.content.option5 {
+  position: relative;
+}
+
+.content.option5::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 1038px;
+  top: 0;
+  left: 0;
+  opacity: 0.2;
+  background: url("./image/page27-bg.png");
+  background-size: 65%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
 .bg-option5 {
   height: 1038px;
   width: 100%;
@@ -251,6 +284,232 @@ p {
   font-weight: 700;
   font-size: 52pt;
   color: #007e7f;
+}
+
+/* option6 */
+.content.option6 {
+  position: relative;
+}
+
+.content.option6::after {
+  content: "";
+  position: absolute;
+  z-index: 0;
+  width: 100%;
+  height: 1038px;
+  top: 0;
+  left: 0;
+  opacity: 0.2;
+  background: url("./image/page27-bg.png");
+  background-size: 65%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.bg-option6 {
+  height: 1038px;
+  width: 100%;
+  background: url("./image/page5.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  padding-top: 39.5px;
+}
+
+.content.option6 .row:first-child {
+  height: 223.12px;
+  width: 100%;
+  background: url("./image/page5-f1.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.content.option6 .row:first-child .col {
+  width: 232px;
+  height: 98px;
+  margin: 61.5px 17.5px;
+  overflow: hidden;
+}
+
+.content.option6 .row:last-child .col {
+  min-width: 352px;
+  height: 157px;
+  overflow: hidden;
+  margin: 64px 27.25px 55.5px;
+}
+
+.content.option6 .row:last-child {
+  height: 554.6px;
+  width: 100%;
+  background: url("./image/page5-f2.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  display: grid;
+  grid-template-columns: 406.5px 406.5px;
+  grid-template-rows: 263px 263px;
+  column-gap: 37px;
+  row-gap: 28.6px;
+}
+
+.option6.content .row .col p {
+  text-align: center;
+  font-family: "SVN-Book Antiqua";
+  font-weight: 700;
+  font-size: 52pt;
+  color: #007e7f;
+}
+
+.option6.content .row:last-child .col p {
+  font-size: 36pt;
+}
+
+/* option7 */
+.content.option7 .row:first-child {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.option7 p {
+  font-family: "SVN-Book Antiqua";
+  font-size: 16pt;
+}
+
+.content.option7 .row:first-child .col:first-child p::before {
+  content: open-quote;
+}
+
+.content.option7 .row:first-child .col:first-child p::after {
+  content: close-quote;
+}
+
+.content.option7 .row:first-child .col:last-child p::before {
+  content: "(";
+}
+
+.content.option7 .row:first-child .col:last-child p::after {
+  content: ")";
+}
+
+/* option8 */
+p.name, p.datebirth {
+  text-align: center;
+  color: #0e3849;
+  font-family: "SVN-Book Antiqua";
+  font-size: 20pt;
+}
+
+p.name span span:last-child, p.datebirth span span:last-child {
+  font-weight: bold;
+}
+
+.content.option8 {
+  position: relative;
+  height: 1038px;
+}
+
+.content.option8::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 1038px;
+  top: 0;
+  left: 0;
+  opacity: 0.2;
+  background: url("./image/page27-bg.png");
+  background-size: 60%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.content.option8 .row:first-child {
+  display: flex;
+  justify-content: space-between;
+  margin: 100px 20px 50px;
+}
+.content.option8 .row:first-child .col:first-child {
+  color: #007e7f;
+  font-family: "SVN-Berkshire Swash";
+  font-size: 32pt;
+  font-weight: bold;
+}
+.content.option8 .row:first-child .col:first-child p {
+  width: 100%;
+  white-space: nowrap;
+}
+.content.option8 .row:first-child .col:first-child p:last-child {
+  margin-left: 80px;
+}
+
+.content.option8 .row:last-child {
+  padding: 20px;
+  background-color: #007f7f46;
+}
+.content.option8 .row:last-child p {
+  color: #48362e;
+  font-family: "SVN-Book Antiqua";
+  font-size: 16pt;
+  font-weight: bold;
+}
+
+.content.option8 .avatar {
+  width: 150px;
+  height: 150px;
+  border: 5px solid #007e7f;
+  overflow: hidden;
+  position: relative;
+  left: -50%;
+  top: -25%;
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+}
+.content.option8 .avatar img {
+  margin-top: -30px;
+  margin-left: -30px;
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  object-position: center;
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+}
+
+/* option9 */
+.option9 {
+  text-align: center;
+}
+.option9 .bg-option9 {
+  height: 1033px;
+  background: url("./image/page1-bg2.png"), url("./image/page1-bg1.png");
+  background-repeat: no-repeat, no-repeat;
+  background-size: cover, 100%;
+}
+.option9 p {
+  font-family: "SVN-Avo";
+  font-weight: bold;
+  text-align: center;
+}
+.option9 p span {
+  background: #f2edae;
+  background: radial-gradient(circle, #f2edae 0%, #c4ae62 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.option9 .frame__border {
+  border: 5px solid;
+  border-image-slice: 1;
+  border-image-source: radial-gradient(circle, #f2edae 0%, #c4ae62 100%);
 }
 
 .bg-gray {
@@ -291,4 +550,5 @@ svg {
 @font-face {
   font-family: SVN-Avo;
   src: url("http://duongthao.edu.vn/public/era/SVN-Avo.ttf");
+  font-weight: bold;
 }
