fix bg p1 and p28

--- a/index.css
+++ b/index.css
@@ -487,13 +487,34 @@ p.name span span:last-child, p.datebirth span span:last-child {
 
 /* option9 */
 .option9 {
+  width: 900px;
+  margin: 0 auto;
   text-align: center;
+  height: 1033px;
+  background: url("./image/page1-bg1.png");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .option9 .bg-option9 {
+  position: relative;
   height: 1033px;
-  background: url("./image/page1-bg2.png"), url("./image/page1-bg1.png");
-  background-repeat: no-repeat, no-repeat;
-  background-size: cover, 100%;
+  background: url("./image/page1-bg2.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: 2;
+}
+.option9 .bg-option9::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 1033px;
+  width: 900px;
+  z-index: -1;
+  background: url("./image/page1-bg3.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 0.9;
 }
 .option9 p {
   font-family: "SVN-Avo";
@@ -546,9 +567,4 @@ svg {
 
 @page {
   size: a4;
-}
-@font-face {
-  font-family: SVN-Avo;
-  src: url("http://duongthao.edu.vn/public/era/SVN-Avo.ttf");
-  font-weight: bold;
 }
